--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero" aria-label="Introduction">
       <div class="photo" aria-hidden="true" id="heroPhoto">
-        <img src="https://i.postimg.cc/PqDG1LDN/20250608-110842.jpg" alt="Profile photo of portfolio owner" />
+        <img src="/img/20250608-110842.jpg" alt="Profile photo of portfolio owner" />
       </div>
       <div class="intro marquee" id="heroIntro">
         <span><h1>Hello, I'm Rakha Abdillah Nugraha</h1></span>
