--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero" aria-label="Introduction">
       <div class="photo" aria-hidden="true" id="heroPhoto">
-        <img src="/img/20250608-110842.jpg" alt="Profile photo of portfolio owner" />
+        <a href='https://postimg.cc/yJmdtvLD' target='_blank'><img src='https://i.postimg.cc/yJmdtvLD/20250608-110842.jpg' border='0' alt='20250608-110842'/></a>
       </div>
       <div class="intro marquee" id="heroIntro">
         <span><h1>Hello, I'm Rakha Abdillah Nugraha</h1></span>
