--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <!-- Hero Section -->
     <section id="home" class="hero" aria-label="Introduction">
       <div class="photo" aria-hidden="true" id="heroPhoto">
-        <a href='https://postimg.cc/yJmdtvLD' target='_blank'><img src='https://i.postimg.cc/yJmdtvLD/20250608-110842.jpg' border='0' alt='20250608-110842'/></a>
+        <img src="/20250608-110842.jpg" alt="Photo of owner">
       </div>
       <div class="intro marquee" id="heroIntro">
         <span><h1>Hello, I'm Rakha Abdillah Nugraha</h1></span>
             <!-- Teks Berjalan -->
-    <!-- <div class="marquee">
+    <div class="marquee">
       <span>Selamat datang di portfolio saya! Saya seorang pengembang web dan desainer.</span>
-    </div> -->
+    </div>
         
       </div>
       <p>
