--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero" aria-label="Introduction">
       <div class="photo" aria-hidden="true" id="heroPhoto">
-        <img src="/20250608-110842.jpg" alt="Photo of owner">
+        <img src="20250608-110842.jpg" alt="Photo of owner">
       </div>
       <div class="intro marquee" id="heroIntro">
         <span><h1>Hello, I'm Rakha Abdillah Nugraha</h1></span>
